cambios css index perfil pf turnos para responsive

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
             </ul>
         </nav>
     </header>
-    <main>
         <section class="hero">
             <div>
                 <h2>Lic. Jennifer Mamani Estrada</h2>
@@ -31,7 +30,6 @@
                 <p>50% Off en tu Primera Sesión</p>
             </div>
         </section>
-    </main>
     <main>
         <section class="terapia">
             <div>
@@ -65,17 +63,17 @@
                 <div>
                     <h3>Apto Psicológico para Estudio</h3>
                     <img src="./img/img-apto-psicológico.jpg" alt="">
-                    <a href="./pages/Turnos.html" class="boton">Sacar Turno</a>
+                    <a href="./pages/turnos.html" class="boton">Sacar Turno</a>
                 </div>
                 <div>
                     <h3>Psicoterapia Infanto-Juvenil</h3>
                     <img src="./img/img-niños-niñas.png" alt="">
-                    <a href="./pages/Turnos.html" class="boton">Sacar Turno</a>
+                    <a href="./pages/turnos.html" class="boton">Sacar Turno</a>
                 </div>
                 <div>
                     <h3>Psicoterapia Individual para Adultos</h3>
                     <img src="./img/img-adultos.jpg" alt="">
-                    <a href="./pages/Turnos.html" class="boton">Sacar Turno</a>
+                    <a href="./pages/turnos.html" class="boton">Sacar Turno</a>
                 </div>
             </div>
         </section>
