--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -37,7 +37,7 @@
         </section>
     </main>
     <footer class="grid-pie">
-        <div class="grid1">
+        <div class="logo-pie2">
             <img src="../img/img-logo.png" alt="">
         </div>
         <a class="whatsapp" href="https://wa.me/5491153246060" target="_blank"><img src="../img/img-whatsapp.png" alt=""></a>
