--- a/pages/preguntas frecuentes.html
+++ b/pages/preguntas frecuentes.html
@@ -11,7 +11,7 @@
     <title>Preguntas Frecuentes</title>
 </head>
 <body>
-    <header>
+    <header class="preguntas-frecuentes-barra">
         <img src="../img/img-logo.png" alt="">
         <nav class="barra">
             <ul>
@@ -93,7 +93,7 @@
       </section>
     </main>
     <footer class="grid-pie">
-      <div class="grid1">
+      <div class="logo-pie1">
         <img src="../img/img-logo.png" alt="">
       </div>
         <a class="whatsapp" href="https://wa.me/5491153246060" target="_blank"><img src="../img/img-whatsapp.png" alt=""></a>
