--- a/pages/turnos.html
+++ b/pages/turnos.html
@@ -105,7 +105,7 @@
   </div>
     </section>
     <footer class="grid-pie">
-        <div class="grid1">
+        <div class="logo-pie">
             <img src="../img/img-logo.png" alt="">
         </div>
         <a class="whatsapp" href="https://wa.me/5491153246060" target="_blank"><img src="../img/img-whatsapp.png" alt=""></a>
