--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div>
                 <h2>Lic. Jennifer Mamani Estrada</h2>
                 <!--FOTO-->
-                <a href="./pages/Turnos.html" class="boton-a">Solicitar Turno Ahora</a>
+                <a href="./pages/turnos.html" class="boton-a">Solicitar Turno Ahora</a>
                 <p>50% Off en tu Primera Sesión</p>
             </div>
         </section>
