cambios index contacto css responsive

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -96,10 +96,10 @@
             <nav>
                 <ul>
                     <li><a href="./index.html">INICIO</a></li>
-                    <li><a href="./pages/Perfil.html">PERFIL</a></li>
-                    <li><a href="./pages/Turnos.html">TURNOS</a></li>
-                    <li><a href="./pages/Preguntas Frecuentes.html">PREGUNTAS FRECUENTES</a></li>
-                    <li><a href="./pages/Contacto.html">CONTACTO</a></li>
+                    <li><a href="./pages/perfil.html">PERFIL</a></li>
+                    <li><a href="./pages/turnos.html">TURNOS</a></li>
+                    <li><a href="./pages/preguntas frecuentes.html">PREGUNTAS FRECUENTES</a></li>
+                    <li><a href="./pages/contacto.html">CONTACTO</a></li>
                 </ul>
             </nav>
         </div>
