--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <li><a href="./index.html">INICIO</a></li>
                     <li><a href="./pages/perfil.html">PERFIL</a></li>
                     <li><a href="./pages/turnos.html">TURNOS</a></li>
-                    <li><a href="./pages/preguntas Frecuentes.html">PREGUNTAS FRECUENTES</a></li>
+                    <li><a href="./pages/preguntas frecuentes.html">PREGUNTAS FRECUENTES</a></li>
                     <li><a href="./pages/contacto.html">CONTACTO</a></li>
                 </ul>
             </nav>
