--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -95,11 +95,11 @@
         <div class="grid3">
             <nav>
                 <ul>
-                    <li><a href="./index.html">INICIO</a></li>
-                    <li><a href="./pages/perfil.html">PERFIL</a></li>
-                    <li><a href="./pages/turnos.html">TURNOS</a></li>
-                    <li><a href="./pages/preguntas frecuentes.html">PREGUNTAS FRECUENTES</a></li>
-                    <li><a href="./pages/contacto.html">CONTACTO</a></li>
+                    <li><a href="../index.html">INICIO</a></li>
+                    <li><a href="./perfil.html">PERFIL</a></li>
+                    <li><a href="./turnos.html">TURNOS</a></li>
+                    <li><a href="./preguntas frecuentes.html">PREGUNTAS FRECUENTES</a></li>
+                    <li><a href="./contacto.html">CONTACTO</a></li>
                 </ul>
             </nav>
         </div>
