cambios css estilos media queries

--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -36,7 +36,7 @@
             </div>
         </section>
     </main>
-    <footer class="grid-pie">
+    <footer class="grid-pie1">
         <div class="logo-pie2">
             <img src="../img/img-logo.png" alt="">
         </div>
