--- a/pages/preguntas frecuentes.html
+++ b/pages/preguntas frecuentes.html
@@ -92,7 +92,7 @@
         </div>
       </section>
     </main>
-    <footer class="grid-pie">
+    <footer class="grid-pie3">
       <div class="logo-pie1">
         <img src="../img/img-logo.png" alt="">
       </div>
