--- a/pages/turnos.html
+++ b/pages/turnos.html
@@ -104,8 +104,8 @@
     </div>
   </div>
     </section>
-    <footer class="grid-pie">
-        <div class="logo-pie">
+    <footer class="grid-pie2">
+        <div class="logo-pie3">
             <img src="../img/img-logo.png" alt="">
         </div>
         <a class="whatsapp" href="https://wa.me/5491153246060" target="_blank"><img src="../img/img-whatsapp.png" alt=""></a>
