cambios en index, perfil, foto de perfil, css y responsive

--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -31,7 +31,7 @@
                 Mi experiencia académica y laboral en los ambitos públicos y privados, me permitieron especializarme en Psicoanálisis de adultos e infantojuvenil.
                 Hoy mi objetivo es ofrecer acompañamiento terapéutico desde un enfoque empático y personalizado. Me enfoco en ayudar a las personas a comprender y superar desafíos emocionales, promoviendo el bienestar integral y el crecimiento personal. Con una visión profesional y cálida, mi objetivo es facilitar herramientas prácticas para que cada persona pueda alcanzar su equilibrio emocional y su máximo potencial.</p>
             </div>
-            <div>
+            <div class="perfil-jenni-foto">
                 <img src="../img/img-perfil-jenni.png" alt="">
             </div>
         </section>
