cambio pagina inicio

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -23,6 +23,64 @@
             </ul>
         </nav>
     </header>
+    <section class="hero">
+        <div>
+            <h2>Lic. Jennifer Mamani Estrada</h2>
+            <!--FOTO-->
+            <a href="./pages/turnos.html" class="boton-a">Solicitar Turno Ahora</a>
+            <p>50% Off en tu Primera Sesión</p>
+        </div>
+    </section>
+<main>
+    <section class="terapia">
+        <div>
+            <h2>Hola, soy Jennifer</h2>
+            <p>Mi nombre es Jennifer Mamani Estrada. Soy Psicóloga graduada por la Universidad del Salvador (USAL) con concurrencia finalizada en Psicología Clínica hospitalaria. ¡Bienvenidos!</p>
+        </div>
+        <div class="grid-perfil">
+            <img src="./img/img-perfil-jenni.png" alt="">
+        </div>
+    </section>
+    <section class="porque-terapia">
+        <div>
+            <h3>¿Por qué Terapia?</h3>
+            <p>A medida que transitamos la vida, experimentamos muchos cambios que a menudo son desafiantes y desconocidos. La forma en la que los abordamos incide en nuestra calidad de vida, cuando estos momentos se vuelven abrumadores, dificiles de abordarlos, afecta a nuestra modo y calidad de vida pudiendo muchas veces creer que no hay salidas posibles. Mi objetivo como terapeuta es ayudarte a encontrar herramientas que puedan aliviar tus angustias y encontrar salidas posibles a los problemas que creas que no tienen solución. Conozco y estoy en sintonía con diversas formas de angustias, comunidades marginadas e inmigración. Trabajo desde una perspectiva de género, de derechos y atención primaria.</p>
+        </div>
+        <img src="./img/img-terapia.png" alt="">
+    </section>
+    <section class="esperar-terapia">
+        <div>
+            <h3>¿Qué esperar de la Terapia?</h3>
+            <p>La terapia requiere una relación honesta y abierta entre el paciente y la psicóloga. Juntos, exploraremos lo que te abruma, te hace sentir inseguro/a o te angustia. Exploraremos los pensamientos, las emociones y los comportamientos en un espacio sin prejuicios. Te animaré a sentir curiosidad por ti mismo, a aceptar el cambio, a encontrar el equilibrio, a recuperar la autenticidad, a utilizar tus fortalezas para potenciar tu vida. Colaboraremos para diseñar un plan de tratamiento que se adapte a tus necesidades. Mi objetivo es fomentar el crecimiento personal, fortalecer las relaciones y aumentar el bienestar general en un entorno confidencial y de apoyo.</p>
+        </div>
+        <img src="img/img-que-esperar.jpg" alt="">
+    </section>
+    <section class="grid-palabras">
+        <div class="grid-foto"><img src="./img/img-2.jpg" alt=""></div>
+    </section>
+    <section class="servicios">
+        <h2>Servicios</h2>
+        <div class="servicios-psico">
+            <div>
+                <h3>Apto Psicológico para Estudio</h3>
+                <img src="./img/img-apto-psicológico.jpg" alt="">
+                <a href="./pages/turnos.html" class="boton">Sacar Turno</a>
+            </div>
+            <div>
+                <h3>Psicoterapia Infanto-Juvenil</h3>
+                <img src="./img/img-niños-niñas.png" alt="">
+                <a href="./pages/turnos.html" class="boton">Sacar Turno</a>
+            </div>
+            <div>
+                <h3>Psicoterapia Individual para Adultos</h3>
+                <img src="./img/img-adultos.jpg" alt="">
+                <a href="./pages/turnos.html" class="boton">Sacar Turno</a>
+            </div>
+        </div>
+    </section>
+    <section class="foto">
+        <!--Foto-->
+    </section>
     <footer class="grid-pie">
         <div class="grid1">
             <img src="../img/img-logo.png" alt="">
