cambios pagina inicio completado

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -12,7 +12,6 @@
 <body>
     <header>
         <img src="../img/img-logo.png" alt="">
-        <h1>Lic. Jennifer Mamani Estrada</h1>
         <nav class="barra">
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
@@ -27,18 +26,18 @@
         <div>
             <h2>Lic. Jennifer Mamani Estrada</h2>
             <!--FOTO-->
-            <a href="./pages/turnos.html" class="boton-a">Solicitar Turno Ahora</a>
+            <a href="../pages/turnos.html" class="boton-a">Solicitar Turno Ahora</a>
             <p>50% Off en tu Primera Sesión</p>
         </div>
     </section>
-<main>
+    <main>
     <section class="terapia">
         <div>
             <h2>Hola, soy Jennifer</h2>
             <p>Mi nombre es Jennifer Mamani Estrada. Soy Psicóloga graduada por la Universidad del Salvador (USAL) con concurrencia finalizada en Psicología Clínica hospitalaria. ¡Bienvenidos!</p>
         </div>
         <div class="grid-perfil">
-            <img src="./img/img-perfil-jenni.png" alt="">
+            <img src="../img/img-perfil-jenni.png" alt="">
         </div>
     </section>
     <section class="porque-terapia">
@@ -46,46 +45,76 @@
             <h3>¿Por qué Terapia?</h3>
             <p>A medida que transitamos la vida, experimentamos muchos cambios que a menudo son desafiantes y desconocidos. La forma en la que los abordamos incide en nuestra calidad de vida, cuando estos momentos se vuelven abrumadores, dificiles de abordarlos, afecta a nuestra modo y calidad de vida pudiendo muchas veces creer que no hay salidas posibles. Mi objetivo como terapeuta es ayudarte a encontrar herramientas que puedan aliviar tus angustias y encontrar salidas posibles a los problemas que creas que no tienen solución. Conozco y estoy en sintonía con diversas formas de angustias, comunidades marginadas e inmigración. Trabajo desde una perspectiva de género, de derechos y atención primaria.</p>
         </div>
-        <img src="./img/img-terapia.png" alt="">
+        <img src="../img/img-terapia.png" alt="">
     </section>
     <section class="esperar-terapia">
         <div>
             <h3>¿Qué esperar de la Terapia?</h3>
             <p>La terapia requiere una relación honesta y abierta entre el paciente y la psicóloga. Juntos, exploraremos lo que te abruma, te hace sentir inseguro/a o te angustia. Exploraremos los pensamientos, las emociones y los comportamientos en un espacio sin prejuicios. Te animaré a sentir curiosidad por ti mismo, a aceptar el cambio, a encontrar el equilibrio, a recuperar la autenticidad, a utilizar tus fortalezas para potenciar tu vida. Colaboraremos para diseñar un plan de tratamiento que se adapte a tus necesidades. Mi objetivo es fomentar el crecimiento personal, fortalecer las relaciones y aumentar el bienestar general en un entorno confidencial y de apoyo.</p>
         </div>
-        <img src="img/img-que-esperar.jpg" alt="">
+        <img src="../img/img-que-esperar.jpg" alt="">
     </section>
     <section class="grid-palabras">
-        <div class="grid-foto"><img src="./img/img-2.jpg" alt=""></div>
+        <div class="grid-foto"><img src="../img/img-2.jpg" alt=""></div>
     </section>
     <section class="servicios">
         <h2>Servicios</h2>
         <div class="servicios-psico">
             <div>
                 <h3>Apto Psicológico para Estudio</h3>
-                <img src="./img/img-apto-psicológico.jpg" alt="">
-                <a href="./pages/turnos.html" class="boton">Sacar Turno</a>
+                <img src="../img/img-apto-psicológico.jpg" alt="">
+                <a href="../pages/turnos.html" class="boton">Sacar Turno</a>
             </div>
             <div>
                 <h3>Psicoterapia Infanto-Juvenil</h3>
-                <img src="./img/img-niños-niñas.png" alt="">
-                <a href="./pages/turnos.html" class="boton">Sacar Turno</a>
+                <img src="../img/img-niños-niñas.png" alt="">
+                <a href="../pages/turnos.html" class="boton">Sacar Turno</a>
             </div>
             <div>
                 <h3>Psicoterapia Individual para Adultos</h3>
-                <img src="./img/img-adultos.jpg" alt="">
-                <a href="./pages/turnos.html" class="boton">Sacar Turno</a>
+                <img src="../img/img-adultos.jpg" alt="">
+                <a href="../pages/turnos.html" class="boton">Sacar Turno</a>
             </div>
         </div>
     </section>
     <section class="foto">
         <!--Foto-->
     </section>
+    </main>
     <footer class="grid-pie">
         <div class="grid1">
             <img src="../img/img-logo.png" alt="">
         </div>
+        <div class="grid2">
+            <h2>Datos de Contacto</h2>
+            <div>
+                <img src="../img/mail.png" alt="">
+                <p>Email:psi.jennifermamani@gmail.com</p>
+            </div>
+            <div>
+                <img src="../img/img-whatsapp.png" alt="">
+                <p>Whatsapp: 11-5324-6060</p>
+            </div>
+            <div>
+                <img src="../img/placeholder.png" alt="">
+                <p>Dirección: Avenida Olazábal 5125 (CABA)</p>
+            </div>
+        </div>
         <a class="whatsapp" href="https://wa.me/5491153246060" target="_blank"><img src="../img/img-whatsapp.png" alt=""></a>
+        <div class="grid3">
+            <nav>
+                <ul>
+                    <li><a href="../index.html">INICIO</a></li>
+                    <li><a href="../pages/perfil.html">PERFIL</a></li>
+                    <li><a href="../pages/turnos.html">TURNOS</a></li>
+                    <li><a href="../pages/preguntas frecuentes.html">PREGUNTAS FRECUENTES</a></li>
+                    <li><a href="../pages/contacto.html">CONTACTO</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="grid4">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.091258258741!2d-58.48890522501579!3d-34.57655737296405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb65d5c457587%3A0x325db5bd249102da!2sAv.%20Olaz%C3%A1bal%205125%2C%20C1431CGH%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1730054710300!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
