cambios en las páginas

--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -24,6 +24,7 @@
         </nav>
     </header>
     <main>
+        <h1>Perfil</h1>
         <section class="perfil-jenni">
             <div>
                 <h2>Hola soy Jennifer</h2>
