--- a/pages/preguntas frecuentes.html
+++ b/pages/preguntas frecuentes.html
@@ -25,6 +25,7 @@
         </nav>
     </header>
     <main>
+      <h1>Preguntas Frecuentes</h1>
       <section class="preguntas-frecuentes">
         <div>
           <h2>Preguntas Frecuentes</h2>
