--- a/pages/turnos.html
+++ b/pages/turnos.html
@@ -24,9 +24,10 @@
         </nav>
     </header>
     <main>
+        <h1>Para solicitar un Turno complete el siguiente Formulario</h1>
         <section class="turnos">
             <div>
-                <h2>Para solicitar un Turno complete el siguiente Formulario</h2>
+                <!-- <h2>Para solicitar un Turno complete el siguiente Formulario</h2> -->
                 <form action="" method="" enctype="">
                     <div>
                         <label for="">Nombre:</label>
@@ -80,7 +81,7 @@
                                 <!-- Button trigger modal -->
                         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
                             Enviar Formulario
-                          </button>
+                        </button>
                     </div>
                 </form>    
             </div>
