--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!--CSS-->
 
-    <!-- <link rel="stylesheet" href="./css/style.css"> -->
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <!-- <link rel="stylesheet" href="./css/estilos.css"> -->
     <title>Jennifer Mamani Estrada</title>
 </head>
 <body>
     <header>
-        <h1><img src="./img/img-logo.png" alt=""></h1>
+        <img src="./img/img-logo.png" alt="">
         <nav class="barra">
             <ul>
                 <li><a href="./index.html">INICIO</a></li>
@@ -25,7 +25,7 @@
     </header>
         <section class="hero">
             <div>
-                <h2>Lic. Jennifer Mamani Estrada</h2>
+                <h1>Lic. Jennifer Mamani Estrada</h1>
                 <!--FOTO-->
                 <a href="./pages/turnos.html" class="boton-a">Solicitar Turno Ahora</a>
                 <p>50% Off en tu Primera Sesión</p>
@@ -43,14 +43,14 @@
         </section>
         <section class="porque-terapia">
             <div>
-                <h3>¿Por qué Terapia?</h3>
+                <h2>¿Por qué Terapia?</h2>
                 <p>A medida que transitamos la vida, experimentamos muchos cambios que a menudo son desafiantes y desconocidos. La forma en la que los abordamos incide en nuestra calidad de vida, cuando estos momentos se vuelven abrumadores, dificiles de abordarlos, afecta a nuestra modo y calidad de vida pudiendo muchas veces creer que no hay salidas posibles. Mi objetivo como terapeuta es ayudarte a encontrar herramientas que puedan aliviar tus angustias y encontrar salidas posibles a los problemas que creas que no tienen solución. Conozco y estoy en sintonía con diversas formas de angustias, comunidades marginadas e inmigración. Trabajo desde una perspectiva de género, de derechos y atención primaria.</p>
             </div>
             <img src="./img/img-terapia.png" alt="">
         </section>
         <section class="esperar-terapia">
             <div>
-                <h3>¿Qué esperar de la Terapia?</h3>
+                <h2>¿Qué esperar de la Terapia?</h2>
                 <p>La terapia requiere una relación honesta y abierta entre el paciente y la psicóloga. Juntos, exploraremos lo que te abruma, te hace sentir inseguro/a o te angustia. Exploraremos los pensamientos, las emociones y los comportamientos en un espacio sin prejuicios. Te animaré a sentir curiosidad por ti mismo, a aceptar el cambio, a encontrar el equilibrio, a recuperar la autenticidad, a utilizar tus fortalezas para potenciar tu vida. Colaboraremos para diseñar un plan de tratamiento que se adapte a tus necesidades. Mi objetivo es fomentar el crecimiento personal, fortalecer las relaciones y aumentar el bienestar general en un entorno confidencial y de apoyo.</p>
             </div>
             <img src="img/img-que-esperar.jpg" alt="">
