cambios para la tercera pre entrega

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -24,7 +24,7 @@
         </nav>
     </header>
     <main>
-        <h1>Datos de Contacto</h1>
+        <h1 class="contacto-titulo">Datos de Contacto</h1>
         <section class="contacto">
             <div>
                 <h2>Consulta</h2>
