--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -24,10 +24,10 @@
         </nav>
     </header>
     <main>
-        <h1>Perfil</h1>
+        <h1 class="perfil-titulo">Acerca de mi</h1>
         <section class="perfil-jenni">
             <div>
-                <h2>Hola soy Jennifer</h2>
+                <h2>¡Hola, soy Jennifer!</h2>
                 <p>Mi nombre es Jennifer Mamani Estrada. Soy Licenciada en Psicología de la Universidad del Salvador (USAL). Luego de graduarme, me formé como Concurrente de Psicología Clínica en el ámbito hospitalario público. Durante ese tiempo fui capacitandome adquiriendo los conocimientos, competencias, aptitudes necesarias para ejercer la profesión y, de esta manera, brindar la mejor atención a mis pacientes y consultantes.
                 Asimismo, me formé en Psicodiagnóstico realizando frecuentemente Aptos Psicológicos para estudio. 
                 Mi experiencia académica y laboral en los ambitos públicos y privados, me permitieron especializarme en Psicoanálisis de adultos e infantojuvenil.
