--- a/pages/preguntas frecuentes.html
+++ b/pages/preguntas frecuentes.html
@@ -25,10 +25,9 @@
         </nav>
     </header>
     <main>
-      <h1>Preguntas Frecuentes</h1>
+      <h1 class="preguntas-titulo">Preguntas Frecuentes</h1>
       <section class="preguntas-frecuentes">
         <div>
-          <h2>Preguntas Frecuentes</h2>
           <div class="accordion" id="accordionExample">
               <div class="accordion-item">
                 <h2 class="accordion-header">
