--- a/pages/turnos.html
+++ b/pages/turnos.html
@@ -24,7 +24,7 @@
         </nav>
     </header>
     <main>
-        <h1>Para solicitar un Turno complete el siguiente Formulario</h1>
+        <h1 class="turnos-titulo">Para solicitar un Turno complete el siguiente Formulario</h1>
         <section class="turnos">
             <div>
                 <!-- <h2>Para solicitar un Turno complete el siguiente Formulario</h2> -->
