--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!--CSS-->
 
     <!-- <link rel="stylesheet" href="./css/style.css"> -->
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="./estilos.css">
     <title>Jennifer Mamani Estrada</title>
 </head>
 <body>
