--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -7,7 +7,7 @@
     <!--CSS-->
 
     <!-- <link rel="stylesheet" href="../css/style.css"> -->
-    <link rel="stylesheet" href="../estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>Perfil</title>
 </head>
 <body>
