--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -6,8 +6,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!--CSS-->
 
-    <!-- <link rel="stylesheet" href="../css/style.css"> -->
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <!-- <link rel="stylesheet" href="../css/estilos.css"> -->
     <title>Perfil</title>
 </head>
 <body>
@@ -38,11 +38,40 @@
             </div>
         </section>
     </main>
-    <footer class="grid-pie1">
-        <div class="logo-pie2">
+    <footer class="grid-pie">
+        <div class="grid1">
             <img src="../img/img-logo.png" alt="">
         </div>
+        <div class="grid2">
+            <h2>Datos de Contacto</h2>
+            <div>
+                <img src="../img/mail.png" alt="">
+                <p>Email:psi.jennifermamani@gmail.com</p>
+            </div>
+            <div>
+                <img src="../img/img-whatsapp.png" alt="">
+                <p>Whatsapp: 11-5324-6060</p>
+            </div>
+            <div>
+                <img src="../img/placeholder.png" alt="">
+                <p>Dirección: Avenida Olazábal 5125 (CABA)</p>
+            </div>
+        </div>
         <a class="whatsapp" href="https://wa.me/5491153246060" target="_blank"><img src="../img/img-whatsapp.png" alt=""></a>
+        <div class="grid3">
+            <nav>
+                <ul>
+                    <li><a href="../index.html">INICIO</a></li>
+                    <li><a href="../pages/perfil.html">PERFIL</a></li>
+                    <li><a href="../pages/turnos.html">TURNOS</a></li>
+                    <li><a href="../pages/preguntas frecuentes.html">PREGUNTAS FRECUENTES</a></li>
+                    <li><a href="../pages/contacto.html">CONTACTO</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="grid4">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.091258258741!2d-58.48890522501579!3d-34.57655737296405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb65d5c457587%3A0x325db5bd249102da!2sAv.%20Olaz%C3%A1bal%205125%2C%20C1431CGH%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1730054710300!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
