--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!--CSS-->
 
-    <!-- <link rel="stylesheet" href="./css/style.css"> -->
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <!-- <link rel="stylesheet" href="./css/estilos.css"> -->
     <title>Jennifer Mamani Estrada</title>
 </head>
 <body>
     <header>
-        <img src="./img/img-logo.png" alt="">
+        <img src="./img/img-logo.png" alt="logo empresarial">
         <nav class="barra">
             <ul>
                 <li><a href="./index.html">INICIO</a></li>
@@ -38,7 +38,7 @@
                 <p>Mi nombre es Jennifer Mamani Estrada. Soy Psicóloga graduada por la Universidad del Salvador (USAL) con concurrencia finalizada en Psicología Clínica hospitalaria. ¡Bienvenidos!</p>
             </div>
             <div class="grid-perfil">
-                <img src="./img/img-perfil-jenni.png" alt="">
+                <img src="./img/img-perfil-jenni.png" alt="psicologa jennifer mamani estrada">
             </div>
         </section>
         <section class="porque-terapia">
@@ -46,34 +46,34 @@
                 <h2>¿Por qué Terapia?</h2>
                 <p>A medida que transitamos la vida, experimentamos muchos cambios que a menudo son desafiantes y desconocidos. La forma en la que los abordamos incide en nuestra calidad de vida, cuando estos momentos se vuelven abrumadores, dificiles de abordarlos, afecta a nuestra modo y calidad de vida pudiendo muchas veces creer que no hay salidas posibles. Mi objetivo como terapeuta es ayudarte a encontrar herramientas que puedan aliviar tus angustias y encontrar salidas posibles a los problemas que creas que no tienen solución. Conozco y estoy en sintonía con diversas formas de angustias, comunidades marginadas e inmigración. Trabajo desde una perspectiva de género, de derechos y atención primaria.</p>
             </div>
-            <img src="./img/img-terapia.png" alt="">
+            <img src="./img/img-terapia.png" alt="mujer estresada, saturada, irritada">
         </section>
         <section class="esperar-terapia">
             <div>
                 <h2>¿Qué esperar de la Terapia?</h2>
                 <p>La terapia requiere una relación honesta y abierta entre el paciente y la psicóloga. Juntos, exploraremos lo que te abruma, te hace sentir inseguro/a o te angustia. Exploraremos los pensamientos, las emociones y los comportamientos en un espacio sin prejuicios. Te animaré a sentir curiosidad por ti mismo, a aceptar el cambio, a encontrar el equilibrio, a recuperar la autenticidad, a utilizar tus fortalezas para potenciar tu vida. Colaboraremos para diseñar un plan de tratamiento que se adapte a tus necesidades. Mi objetivo es fomentar el crecimiento personal, fortalecer las relaciones y aumentar el bienestar general en un entorno confidencial y de apoyo.</p>
             </div>
-            <img src="img/img-que-esperar.jpg" alt="">
+            <img src="img/img-que-esperar.jpg" alt="niño en sesion con su psicologa">
         </section>
         <section class="grid-palabras">
-            <div class="grid-foto"><img src="./img/img-2.jpg" alt=""></div>
+            <div class="grid-foto"><img src="./img/img-2.jpg" alt="palabras sueltas sobre salud mental"></div>
         </section>
         <section class="servicios">
             <h2>Servicios</h2>
             <div class="servicios-psico">
                 <div>
                     <h3>Apto Psicológico para Estudio</h3>
-                    <img src="./img/img-apto-psicológico.jpg" alt="">
+                    <img src="./img/img-apto-psicológico.jpg" alt="apto psicologico">
                     <a href="./pages/turnos.html" class="boton">Sacar Turno</a>
                 </div>
                 <div>
                     <h3>Psicoterapia Infanto-Juvenil</h3>
-                    <img src="./img/img-niños-niñas.png" alt="">
+                    <img src="./img/img-niños-niñas.png" alt="terapia infantil">
                     <a href="./pages/turnos.html" class="boton">Sacar Turno</a>
                 </div>
                 <div>
                     <h3>Psicoterapia Individual para Adultos</h3>
-                    <img src="./img/img-adultos.jpg" alt="">
+                    <img src="./img/img-adultos.jpg" alt="terapia para adultos">
                     <a href="./pages/turnos.html" class="boton">Sacar Turno</a>
                 </div>
             </div>
@@ -84,24 +84,24 @@
     </main>
     <footer class="grid-pie">
         <div class="grid1">
-            <img src="./img/img-logo.png" alt="">
+            <img src="./img/img-logo.png" alt="logo empresarial">
         </div>
         <div class="grid2">
             <h2>Datos de Contacto</h2>
             <div>
-                <img src="./img/mail.png" alt="">
+                <img src="./img/mail.png" alt="logo correo">
                 <p>Email:psi.jennifermamani@gmail.com</p>
             </div>
             <div>
-                <img src="./img/img-whatsapp.png" alt="">
+                <img src="./img/img-whatsapp.png" alt="logo whatsapp">
                 <p>Whatsapp: 11-5324-6060</p>
             </div>
             <div>
-                <img src="./img/placeholder.png" alt="">
+                <img src="./img/placeholder.png" alt="logo direccion">
                 <p>Dirección: Avenida Olazábal 5125 (CABA)</p>
             </div>
         </div>
-        <a class="whatsapp" href="https://wa.me/5491153246060" target="_blank"><img src="./img/img-whatsapp.png" alt=""></a>
+        <a class="whatsapp" href="https://wa.me/5491153246060" target="_blank"><img src="./img/img-whatsapp.png" alt="logo whatsapp"></a>
         <div class="grid3">
             <nav>
                 <ul>
