--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,13 +6,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!--CSS-->
 
-    <!-- <link rel="stylesheet" href="../css/style.css"> -->
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <!-- <link rel="stylesheet" href="../css/estilos.css"> -->
     <title>Contacto</title>
 </head>
 <body>
     <header>
-        <img src="../img/img-logo.png" alt="">
+        <img src="../img/img-logo.png" alt="logo empresarial">
         <nav class="barra">
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
@@ -76,24 +76,24 @@
     </main>
     <footer class="grid-pie">
         <div class="grid1">
-            <img src="../img/img-logo.png" alt="">
+            <img src="../img/img-logo.png" alt="logo empresarial">
         </div>
         <div class="grid2">
             <h2>Datos de Contacto</h2>
             <div>
-                <img src="../img/mail.png" alt="">
+                <img src="../img/mail.png" alt="logo correo">
                 <p>Email:psi.jennifermamani@gmail.com</p>
             </div>
             <div>
-                <img src="../img/img-whatsapp.png" alt="">
+                <img src="../img/img-whatsapp.png" alt="logo whatsapp">
                 <p>Whatsapp: 11-5324-6060</p>
             </div>
             <div>
-                <img src="../img/placeholder.png" alt="">
+                <img src="../img/placeholder.png" alt="logo direccion">
                 <p>Dirección: Avenida Olazábal 5125 (CABA)</p>
             </div>
         </div>
-        <a class="whatsapp" href="https://wa.me/5491153246060" target="_blank"><img src="../img/img-whatsapp.png" alt=""></a>
+        <a class="whatsapp" href="https://wa.me/5491153246060" target="_blank"><img src="../img/img-whatsapp.png" alt="logo whatsapp"></a>
         <div class="grid3">
             <nav>
                 <ul>
