--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -7,6 +7,7 @@
     <!--CSS-->
 
     <!-- <link rel="stylesheet" href="../css/style.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Inicio</title>
 </head>
@@ -25,17 +26,17 @@
     </header>
     <section class="hero">
         <div>
-            <h1>Lic. Jennifer Mamani Estrada</h1>
+            <h1 class="animate__animated animate__fadeIn">Lic. Jennifer Mamani Estrada</h1>
             <!--FOTO-->
-            <a href="../pages/turnos.html" class="boton-a">Solicitar Turno Ahora</a>
-            <p>50% Off en tu Primera Sesión</p>
+            <a href="../pages/turnos.html" class="boton-a animate__animated animate__fadeIn">Solicitar Turno Ahora</a>
+            <p class="animate__animated animate__fadeIn">50% Off en tu Primera Sesión</p>
         </div>
     </section>
     <main>
     <section class="terapia">
         <div>
-            <h2>Hola, soy Jennifer</h2>
-            <p>Mi nombre es Jennifer Mamani Estrada. Soy Psicóloga graduada por la Universidad del Salvador (USAL) con concurrencia finalizada en Psicología Clínica hospitalaria. ¡Bienvenidos!</p>
+            <h2 class="animate__animated animate__fadeIn">Hola, soy Jennifer</h2>
+            <p class="animate__animated animate__fadeIn">Mi nombre es Jennifer Mamani Estrada. Soy Psicóloga graduada por la Universidad del Salvador (USAL) con concurrencia finalizada en Psicología Clínica hospitalaria. ¡Bienvenidos!</p>
         </div>
         <div class="grid-perfil">
             <img src="../img/img-perfil-jenni.png" alt="psicologa jennifer mamani estrada">
@@ -43,15 +44,15 @@
     </section>
     <section class="porque-terapia">
         <div>
-            <h2>¿Por qué Terapia?</h2>
-            <p>A medida que transitamos la vida, experimentamos muchos cambios que a menudo son desafiantes y desconocidos. La forma en la que los abordamos incide en nuestra calidad de vida, cuando estos momentos se vuelven abrumadores, dificiles de abordarlos, afecta a nuestra modo y calidad de vida pudiendo muchas veces creer que no hay salidas posibles. Mi objetivo como terapeuta es ayudarte a encontrar herramientas que puedan aliviar tus angustias y encontrar salidas posibles a los problemas que creas que no tienen solución. Conozco y estoy en sintonía con diversas formas de angustias, comunidades marginadas e inmigración. Trabajo desde una perspectiva de género, de derechos y atención primaria.</p>
+            <h2 class="animate__animated animate__fadeIn">¿Por qué Terapia?</h2>
+            <p class="animate__animated animate__fadeIn">A medida que transitamos la vida, experimentamos muchos cambios que a menudo son desafiantes y desconocidos. La forma en la que los abordamos incide en nuestra calidad de vida, cuando estos momentos se vuelven abrumadores, dificiles de abordarlos, afecta a nuestra modo y calidad de vida pudiendo muchas veces creer que no hay salidas posibles. Mi objetivo como terapeuta es ayudarte a encontrar herramientas que puedan aliviar tus angustias y encontrar salidas posibles a los problemas que creas que no tienen solución. Conozco y estoy en sintonía con diversas formas de angustias, comunidades marginadas e inmigración. Trabajo desde una perspectiva de género, de derechos y atención primaria.</p>
         </div>
         <img src="../img/img-terapia.png" alt="mujer estresada, saturada, irritada">
     </section>
     <section class="esperar-terapia">
         <div>
-            <h2>¿Qué esperar de la Terapia?</h2>
-            <p>La terapia requiere una relación honesta y abierta entre el paciente y la psicóloga. Juntos, exploraremos lo que te abruma, te hace sentir inseguro/a o te angustia. Exploraremos los pensamientos, las emociones y los comportamientos en un espacio sin prejuicios. Te animaré a sentir curiosidad por ti mismo, a aceptar el cambio, a encontrar el equilibrio, a recuperar la autenticidad, a utilizar tus fortalezas para potenciar tu vida. Colaboraremos para diseñar un plan de tratamiento que se adapte a tus necesidades. Mi objetivo es fomentar el crecimiento personal, fortalecer las relaciones y aumentar el bienestar general en un entorno confidencial y de apoyo.</p>
+            <h2 class="animate__animated animate__fadeIn">¿Qué esperar de la Terapia?</h2>
+            <p class="animate__animated animate__fadeIn">La terapia requiere una relación honesta y abierta entre el paciente y la psicóloga. Juntos, exploraremos lo que te abruma, te hace sentir inseguro/a o te angustia. Exploraremos los pensamientos, las emociones y los comportamientos en un espacio sin prejuicios. Te animaré a sentir curiosidad por ti mismo, a aceptar el cambio, a encontrar el equilibrio, a recuperar la autenticidad, a utilizar tus fortalezas para potenciar tu vida. Colaboraremos para diseñar un plan de tratamiento que se adapte a tus necesidades. Mi objetivo es fomentar el crecimiento personal, fortalecer las relaciones y aumentar el bienestar general en un entorno confidencial y de apoyo.</p>
         </div>
         <img src="../img/img-que-esperar.jpg" alt="niño en sesion con su psicologa">
     </section>
@@ -59,20 +60,20 @@
         <div class="grid-foto"><img src="../img/img-2.jpg" alt="palabras sueltas sobre salud mental"></div>
     </section>
     <section class="servicios">
-        <h2>Servicios</h2>
+        <h2 class="animate__animated animate__fadeIn">Servicios</h2>
         <div class="servicios-psico">
-            <div>
-                <h3>Apto Psicológico para Estudio</h3>
+            <div class="servicios-psico1">
+                <h3 class="animate__animated animate__fadeIn">Apto Psicológico para Estudio</h3>
                 <img src="../img/img-apto-psicológico.jpg" alt="apto psicologico">
                 <a href="../pages/turnos.html" class="boton">Sacar Turno</a>
             </div>
-            <div>
-                <h3>Psicoterapia Infanto-Juvenil</h3>
+            <div class="servicios-psico2">
+                <h3 class="animate__animated animate__fadeIn">Psicoterapia Infanto-Juvenil</h3>
                 <img src="../img/img-niños-niñas.png" alt="terapia infantil">
                 <a href="../pages/turnos.html" class="boton">Sacar Turno</a>
             </div>
-            <div>
-                <h3>Psicoterapia Individual para Adultos</h3>
+            <div class="servicios-psico3">
+                <h3 class="animate__animated animate__fadeIn">Psicoterapia Individual para Adultos</h3>
                 <img src="../img/img-adultos.jpg" alt="terapia para adultos">
                 <a href="../pages/turnos.html" class="boton">Sacar Turno</a>
             </div>
@@ -87,18 +88,18 @@
             <img src="../img/img-logo.png" alt="logo empresarial">
         </div>
         <div class="grid2">
-            <h2>Datos de Contacto</h2>
+            <h2 class="animate__animated animate__fadeIn">Datos de Contacto</h2>
             <div>
                 <img src="../img/mail.png" alt="logo correo">
-                <p>Email:psi.jennifermamani@gmail.com</p>
+                <p class="animate__animated animate__fadeIn">Email:psi.jennifermamani@gmail.com</p>
             </div>
             <div>
                 <img src="../img/img-whatsapp.png" alt="logo whatsapp">
-                <p>Whatsapp: 11-5324-6060</p>
+                <p class="animate__animated animate__fadeIn">Whatsapp: 11-5324-6060</p>
             </div>
             <div>
                 <img src="../img/placeholder.png" alt="logo direccion">
-                <p>Dirección: Avenida Olazábal 5125 (CABA)</p>
+                <p class="animate__animated animate__fadeIn">Dirección: Avenida Olazábal 5125 (CABA)</p>
             </div>
         </div>
         <a class="whatsapp" href="https://wa.me/5491153246060" target="_blank"><img src="../img/img-whatsapp.png" alt="logo whatsapp"></a>
