--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -7,6 +7,7 @@
     <!--CSS-->
 
     <!-- <link rel="stylesheet" href="../css/style.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Perfil</title>
 </head>
@@ -24,11 +25,11 @@
         </nav>
     </header>
     <main>
-        <h1 class="perfil-titulo">Acerca de mi</h1>
+        <h1 class="perfil-titulo animate__animated animate__fadeIn">Acerca de mi</h1>
         <section class="perfil-jenni">
             <div>
-                <h2>¡Hola, soy Jennifer!</h2>
-                <p>Mi nombre es Jennifer Mamani Estrada. Soy Licenciada en Psicología de la Universidad del Salvador (USAL). Luego de graduarme, me formé como Concurrente de Psicología Clínica en el ámbito hospitalario público. Durante ese tiempo fui capacitandome adquiriendo los conocimientos, competencias, aptitudes necesarias para ejercer la profesión y, de esta manera, brindar la mejor atención a mis pacientes y consultantes.
+                <h2 class="animate__animated animate__fadeIn">¡Hola, soy Jennifer!</h2>
+                <p class="animate__animated animate__fadeIn">Mi nombre es Jennifer Mamani Estrada. Soy Licenciada en Psicología de la Universidad del Salvador (USAL). Luego de graduarme, me formé como Concurrente de Psicología Clínica en el ámbito hospitalario público. Durante ese tiempo fui capacitandome adquiriendo los conocimientos, competencias, aptitudes necesarias para ejercer la profesión y, de esta manera, brindar la mejor atención a mis pacientes y consultantes.
                 Asimismo, me formé en Psicodiagnóstico realizando frecuentemente Aptos Psicológicos para estudio. 
                 Mi experiencia académica y laboral en los ambitos públicos y privados, me permitieron especializarme en Psicoanálisis de adultos e infantojuvenil.
                 Hoy mi objetivo es ofrecer acompañamiento terapéutico desde un enfoque empático y personalizado. Me enfoco en ayudar a las personas a comprender y superar desafíos emocionales, promoviendo el bienestar integral y el crecimiento personal. Con una visión profesional y cálida, mi objetivo es facilitar herramientas prácticas para que cada persona pueda alcanzar su equilibrio emocional y su máximo potencial.</p>
@@ -43,18 +44,18 @@
             <img src="../img/img-logo.png" alt="logo empresarial">
         </div>
         <div class="grid2">
-            <h2>Datos de Contacto</h2>
+            <h2 class="animate__animated animate__fadeIn">Datos de Contacto</h2>
             <div>
                 <img src="../img/mail.png" alt="logo correo">
-                <p>Email:psi.jennifermamani@gmail.com</p>
+                <p class="animate__animated animate__fadeIn">Email:psi.jennifermamani@gmail.com</p>
             </div>
             <div>
                 <img src="../img/img-whatsapp.png" alt="logo whatsapp">
-                <p>Whatsapp: 11-5324-6060</p>
+                <p class="animate__animated animate__fadeIn">Whatsapp: 11-5324-6060</p>
             </div>
             <div>
                 <img src="../img/placeholder.png" alt="logo direccion">
-                <p>Dirección: Avenida Olazábal 5125 (CABA)</p>
+                <p class="animate__animated animate__fadeIn">Dirección: Avenida Olazábal 5125 (CABA)</p>
             </div>
         </div>
         <a class="whatsapp" href="https://wa.me/5491153246060" target="_blank"><img src="../img/img-whatsapp.png" alt="logo whatsapp"></a>
