--- a/pages/preguntas frecuentes.html
+++ b/pages/preguntas frecuentes.html
@@ -8,6 +8,7 @@
     <!--CSS-->
 
     <!-- <link rel="stylesheet" href="../css/style.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Preguntas Frecuentes</title>
 </head>
@@ -25,7 +26,7 @@
         </nav>
     </header>
     <main>
-      <h1 class="preguntas-titulo">Preguntas Frecuentes</h1>
+      <h1 class="preguntas-titulo animate__animated animate__fadeIn">Preguntas Frecuentes</h1>
       <section class="preguntas-frecuentes">
         <div>
           <div class="accordion" id="accordionExample">
@@ -98,18 +99,18 @@
         <img src="../img/img-logo.png" alt="logo empresarial">
       </div>
       <div class="grid2">
-        <h2>Datos de Contacto</h2>
+        <h2 class="animate__animated animate__fadeIn">Datos de Contacto</h2>
         <div>
             <img src="../img/mail.png" alt="logo correo">
-            <p>Email:psi.jennifermamani@gmail.com</p>
+            <p class="animate__animated animate__fadeIn">Email:psi.jennifermamani@gmail.com</p>
         </div>
         <div>
             <img src="../img/img-whatsapp.png" alt="logo whatsapp">
-            <p>Whatsapp: 11-5324-6060</p>
+            <p class="animate__animated animate__fadeIn">Whatsapp: 11-5324-6060</p>
         </div>
         <div>
             <img src="../img/placeholder.png" alt="logo direccion">
-            <p>Dirección: Avenida Olazábal 5125 (CABA)</p>
+            <p class="animate__animated animate__fadeIn">Dirección: Avenida Olazábal 5125 (CABA)</p>
         </div>
       </div>
       <a class="whatsapp" href="https://wa.me/5491153246060" target="_blank"><img src="../img/img-whatsapp.png" alt="logo whatsapp"></a>
