--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,6 +7,7 @@
     <!--CSS-->
 
     <!-- <link rel="stylesheet" href="../css/style.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Contacto</title>
 </head>
@@ -24,10 +25,10 @@
         </nav>
     </header>
     <main>
-        <h1 class="contacto-titulo">Datos de Contacto</h1>
+        <h1 class="contacto-titulo animate__animated animate__fadeIn">Datos de Contacto</h1>
         <section class="contacto">
             <div>
-                <h2>Consulta</h2>
+                <h2 class="animate__animated animate__fadeIn">Consulta</h2>
                 <form action="" method="" enctype="">
                     <div>
                         <label for="">Nombre:</label>
@@ -79,18 +80,18 @@
             <img src="../img/img-logo.png" alt="logo empresarial">
         </div>
         <div class="grid2">
-            <h2>Datos de Contacto</h2>
+            <h2 class="animate__animated animate__fadeIn">Datos de Contacto</h2>
             <div>
                 <img src="../img/mail.png" alt="logo correo">
-                <p>Email:psi.jennifermamani@gmail.com</p>
+                <p class="animate__animated animate__fadeIn">Email:psi.jennifermamani@gmail.com</p>
             </div>
             <div>
                 <img src="../img/img-whatsapp.png" alt="logo whatsapp">
-                <p>Whatsapp: 11-5324-6060</p>
+                <p class="animate__animated animate__fadeIn">Whatsapp: 11-5324-6060</p>
             </div>
             <div>
                 <img src="../img/placeholder.png" alt="logo direccion">
-                <p>Dirección: Avenida Olazábal 5125 (CABA)</p>
+                <p class="animate__animated animate__fadeIn">Dirección: Avenida Olazábal 5125 (CABA)</p>
             </div>
         </div>
         <a class="whatsapp" href="https://wa.me/5491153246060" target="_blank"><img src="../img/img-whatsapp.png" alt="logo whatsapp"></a>
